// Vitest Snapshot v1

exports[`DeleteButton > should render successfully 1`] = `
<div>
  <button
    class="px-4 py-2 text-left text-red-500"
    data-testid="delete-button"
  >
    A
  </button>
</div>
`;

exports[`DeleteButton > should render successfully 2`] = `
<div>
  <button
    class="px-4 py-2 text-left text-red-500"
    data-testid="delete-button-confirm"
  >
    B
  </button>
</div>
`;
